--- a/Assignment05.ipynb
+++ b/Assignment05.ipynb
@@ -1954,7 +1954,7 @@
     }
    ],
    "source": [
-    "document.find(\"h3\") #h3 returns databases?"
+    "document.find(\"h3\") #h3 to return databases"
    ]
   },
   {
@@ -2039,17 +2039,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "300b0349-f5d4-4a3c-9912-dfaa227f6dd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_html('https://corgis-edu.github.io/corgis/csv/broadway')"
+    "df = pd.read_html('https://corgis-edu.github.io/corgis/csv/broadway') #not sure how to structure this as a \n",
+    "# function \"def pdcorgis(\"Broadway)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "a4999ff6-88cc-4785-9815-5ccd146c5ef2",
    "metadata": {
     "tags": []
