--- a/Assignment07.ipynb
+++ b/Assignment07.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "cb2d783b-d4db-40de-b4f6-1b46cc06ab51",
+   "cell_type": "markdown",
+   "id": "d54504e3-d26e-4e46-902e-bad5b0b96d97",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Stats and Modeling "
    ]
@@ -3958,21 +3956,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "fc60f1a5-40a0-47b6-805e-3453b3c8b8ca",
+   "cell_type": "markdown",
+   "id": "29bed819-2146-49a6-9c7f-3c94d3042766",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# For the trimmed mean, I removed the bottom 20% and top 20%"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "9308d406-f45e-43fe-8e8d-82a63cf7d2a3",
+   "cell_type": "markdown",
+   "id": "5b161c11-6fab-456f-8d01-bb2302fb7798",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Plot a histogram of the word frequency data and comment on the relative locations of the mean, median, mode, and trimmed mean"
    ]
@@ -4034,14 +4028,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "34091400-d4c9-4fcd-adc3-4e26de3dd1c0",
+   "cell_type": "markdown",
+   "id": "49f9b461-f0d0-4618-9289-9f083209068c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# The distribution is skewed heavily to right. The trimmed mean is closer to the median than the mean, which is further\n",
-    "# to the right. The mode and median are the same."
+    "# The distribution is skewed heavily to right. The trimmed mean is closer to the median than the mean, which is further to the right. The mode and median are the same."
    ]
   },
   {
@@ -4680,14 +4671,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "a2aee4bf-9176-4789-8380-a1590f6f4fcd",
+   "cell_type": "markdown",
+   "id": "4da8a94e-058b-4cf4-a36f-9a1cb326462b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Find the column in features_df that has the highest correlation coefficient with the target values \n",
-    "# in target_df"
+    "# Find the column in features_df that has the highest correlation coefficient with the target values in target_df"
    ]
   },
   {
@@ -4765,21 +4753,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "1999781a-59c8-4705-99f5-d52516c92f40",
+   "cell_type": "markdown",
+   "id": "46ec9d7b-9243-4e7e-9984-840ba2dbb671",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# highest correlation: bmi "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "9423b4c7-19d8-4a01-9c88-9c4120b5491d",
+   "cell_type": "markdown",
+   "id": "45812ed9-6a27-4805-bcd6-76783cb23dd1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Make a scatter plot of the target values vs this feature column's values and \n",
     "# comment on how the plotted points match up with the correlation coefficient"
@@ -4825,22 +4809,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "337ba8a8-9e22-4597-84ae-b34534c16e83",
+   "cell_type": "markdown",
+   "id": "ea1168ae-e072-4ab5-9c55-24f7147ac7c2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# This scatterplot shows a positive correlation; however, .586 is not a very strong linear relationship, \n",
     "# which we can see on the plot as well. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "aae68e0a-08b7-4cf2-b5a1-a68ec6af6385",
+   "cell_type": "markdown",
+   "id": "83cc3ada-e1de-4377-9d3d-456ec336fe41",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Using this feature and target, perform linear regression with sklearn's LinearRegression. \n",
     "# Print the coefficients of the model. Plot the linear fit on top of the scatter plot. Calculate \n",
