--- a/Assignment06.ipynb
+++ b/Assignment06.ipynb
@@ -5,8 +5,8 @@
    "id": "c69a72e9-3042-49f0-ae1b-f20e67e5354a",
    "metadata": {},
    "source": [
-    "##  Shakespeare word frequency\n",
-    "# The Tempest"
+    "# Shakespeare word frequency\n",
+    "## The Tempest"
    ]
   },
   {
@@ -9569,9 +9569,9 @@
    "id": "71eb23b6-305c-48bd-86fa-9b91687d3b94",
    "metadata": {},
    "source": [
-    "## Step 3: Yelp sentiments\n",
-    "# Find your favorite restaurant on Yelp and copy 15 of its reviews into your notebook as Python strings\n",
-    "# Restaurant reviews of Palma in NYC\n"
+    "# Step 3: Yelp sentiments\n",
+    "## Find your favorite restaurant on Yelp and copy 15 of its reviews into your notebook as Python strings\n",
+    "### Restaurant reviews of Palma in NYC\n"
    ]
   },
   {
@@ -10205,8 +10205,8 @@
    "id": "66610228-11f1-4c82-96b4-2000983f5a4c",
    "metadata": {},
    "source": [
-    "## Step 4: Your movie reviews\n",
-    "# Make 5 strings that contain reviews (3 sentences each) of your favorite movie comedies"
+    "# Step 4: Your movie reviews\n",
+    "## Make 5 strings that contain reviews (3 sentences each) of your favorite movie comedies"
    ]
   },
   {
@@ -10214,7 +10214,7 @@
    "id": "9d984937-7022-4f7c-a051-cdb7382b0b85",
    "metadata": {},
    "source": [
-    "# Comedies"
+    "### Comedies"
    ]
   },
   {
@@ -10288,7 +10288,7 @@
    "id": "5ffa78ce-5247-435c-9ae2-7434dfd77693",
    "metadata": {},
    "source": [
-    "# Dramas"
+    "### Dramas"
    ]
   },
   {
@@ -10772,8 +10772,7 @@
    "id": "b9b00ec0-c979-431a-9ee4-6149da2462a2",
    "metadata": {},
    "source": [
-    "# not a great distiniction between the two original genres...dramas perhaps better represented than comedies.\n",
-    "# seems like Do the Right Thing was placed into the comedy topic, which is intersting since some classify it as a comedy-drama"
+    "### not a great distiniction between the two original genres...dramas perhaps better represented than comedies seems like Do the Right Thing was placed into the comedy topic, which is intersting since some classify it as a comedy-drama"
    ]
   },
   {
